Make compatible, Corrected class dependency issues and warnings.